# BlizzardWizard

./: .env  .readthedocs.yaml  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  pyproject-20220808161102.toml  pyproject.toml  spyce.toml
src/: conf.py  glossary.rst  index.rst  install.rst  slides.rst
src/_static/: bibliography.rst  bluetunnel.css  layout.html  references.bib
src/wizard/: settings.py  urls.py
